[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "openmip"
dynamic = ["version"]
description = "A Python library for loading MIP libraries and instances."
readme.content-type = "text/markdown"
readme.file = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Youssouf Emine", email = "youssouf.emine@polymtl.ca" }]
keywords = ["Integer Programming", "Operation Research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["pandas", "filelock", "rich", "requests", "lxml"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools_scm]
